--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -1,149 +1,149 @@
 <div class="sample-contract row" *ngIf="loaded">
   <!--  information contract-->
-  <div *ngIf="!this.mobile" class="col-md-3 sample-contract__information" style="background-color: white">
+  <div *ngIf="!this.mobile" class="col-md-3 sample-contract__information" style="background-color: white;">
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
-      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">
-        {{ "contract.detail" | translate }}
-      </div>
+      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">{{'contract.detail' | translate}}</div>
       <div style="line-height: 25px">
-        <div *ngIf="isMultiSign" style="line-height: 25px; text-align: center">
-          <img *ngIf="!isDisablePrevious" src="/assets/img/icon_previous.svg" style="padding-right: 10px; cursor: pointer"(click)="previousContract()"/>
-          <img *ngIf="isDisablePrevious" src="/assets/img/icon_previous_hidden.svg" style="padding-right: 10px; cursor: pointer"/>
+        <div>
+          <span class="title-contract">{{'contract.uid' | translate}}:</span>
+          <span>{{datas?.is_data_contract?.contract_uid}}</span>
+        </div>
+        <div>
+          <span class="title-contract">{{'menu.contract.type.list' | translate}}:</span>
+          <span>{{datas?.is_data_contract?.type_name}}</span>
+        </div>
+        <div>
+          <span class="title-contract">{{'contract.name' | translate}}:</span>
+          <span>{{datas.is_data_contract.name}}</span>
+        </div>
+        <div>
+          <span class="title-contract">{{'contract.number' | translate}}:</span>
+          <span>{{datas.is_data_contract.contract_no}}</span>
+        </div>
+        <div>
+          <span class="title-contract">{{'file.attach' | translate}}:</span>
+          <span *ngFor="let d of allFileAttachment;let i = index">
+            <span *ngIf="i != 0">, </span>
+            <a style="color: #106DB6" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
+          </span>
+        </div>
+        <div>
+          <span class="title-contract">{{'contract.connect' | translate}}:
+          </span>
+          <span *ngFor="let d of datas?.is_data_contract?.refs;let i = index">
+            <span *ngIf="i != 0">, </span>
+            <a style="color: #106DB6;" rel="stylesheet" [href]="'/main/form-contract/detail/' + d.ref_id" target="_blank">{{d.ref_name}}</a>
+          </span>
+        </div>
 
-          <input type="text" [(ngModel)]="pageNumberCurrent" style="width: 30px;text-align: center;border-radius: 3px;border: 1px solid #106db6;"
-                  (keypress)="numberOnly($event)" (change)="typingPage($event)"
-          />
-          
-          / {{ pageNumberTotal }}
-          <img *ngIf="!isDisableNext" src="/assets/img/icon_next.svg" style="padding-left: 10px; cursor: pointer" (click)="nextContract()"/>
-          <img *ngIf="isDisableNext" src="/assets/img/icon_next_hidden.svg" style="padding-left: 10px; cursor: pointer"/>
-        </div>
-        <hr style="margin: 10px" />
-        <div>
-          <span class="title-contract">{{ "contract.uid" | translate }}:</span>
-          <span>{{ datas?.is_data_contract?.contract_uid }}</span>
-        </div>
-        <div>
-          <span class="title-contract"
-            >{{ "menu.contract.type.list" | translate }}:</span
-          >
-          <span>{{ datas?.is_data_contract?.type_name }}</span>
-        </div>
-        <div>
-          <span class="title-contract">{{ "contract.name" | translate }}:</span>
-          <span>{{ datas.is_data_contract.name }}</span>
-        </div>
-        <div>
-          <span class="title-contract"
-            >{{ "contract.number" | translate }}:</span
-          >
-          <span>{{ datas.is_data_contract.contract_no }}</span>
-        </div>
-        <div>
-          <span class="title-contract">{{ "file.attach" | translate }}:</span>
-          <span *ngFor="let d of allFileAttachment; let i = index">
-            <span *ngIf="i != 0">, </span>
-            <a
-              style="color: #106db6"
-              rel="stylesheet"
-              [href]="d.path"
-              target="_blank"
-              >{{ d.filename }}</a
-            >
-          </span>
-        </div>
-        <div>
-          <span class="title-contract"
-            >{{ "contract.connect" | translate }}:
-          </span>
-          <span *ngFor="let d of datas?.is_data_contract?.refs; let i = index">
-            <span *ngIf="i != 0">, </span>
-            <a
-              style="color: #106db6"
-              rel="stylesheet"
-              [href]="'/main/form-contract/detail/' + d.ref_id"
-              target="_blank"
-              >{{ d.ref_name }}</a
-            >
-          </span>
-        </div>
       </div>
     </div>
-    <hr />
+   <hr>
 
     <div class="location-change" [ngStyle]="changeDisplay()">
-      <div
-        class="sample-contract__information&#45;&#45;user-sign"
-        style="line-height: 25px"
-      >
-        <div style="text-align: center; font-weight: bold" class="label">
-          {{ "relate.party" | translate }}
-        </div>
+      <div class="sample-contract__information&#45;&#45;user-sign" style="line-height: 25px">
+        <div style="text-align: center; font-weight: bold" class="label">{{'relate.party' | translate}}</div>
         <div *ngFor="let d of this.datas?.is_data_contract?.participants">
-          <p>{{ d.name }}</p>
+          <p>{{d.name}}</p>
         </div>
+
       </div>
       <div>
-        <u
-          style="color: #106db6; padding-right: 3px; cursor: pointer"
-          (click)="processHandleContract()"
-          >{{ "contract_processing_flow" | translate }}</u
-        >
+        <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">{{'contract_processing_flow' | translate}}</u>
       </div>
     </div>
   </div>
 
   <!--  file content-->
   <!--  width: 74.7%-->
-  <div
-    *ngIf="!this.mobile"
-    class="col-md-9 sample-contract__file viewer-pdf isDrag"
-    style="background-color: #f2f2f2; position: relative"
-  >
-    <div id="pdf-viewer-step-3"></div>
+  <div (scroll)="scroll($event)" id="pdf-full" *ngIf="!this.mobile" class="col-md-9 sample-contract__file viewer-pdf isDrag"
+       style="background-color: #F2F2F2; position: relative;">
+    <div id="pdf-viewer-step-3">
+    </div>
   </div>
 
   <div *ngIf="this.mobile">
-    <pdf-viewer
-      [src]="pdfSrc"
-      [render-text]="true"
-      style="width: 95%; height: calc(70vh); border: 1px"
-      [fit-to-page]="true"
-      [show-borders]="true"
+    <pdf-viewer [src]="pdfSrc"
+    [render-text]="true"
+    style="width: 95%; height: calc(70vh); border: 1px;"
+    [fit-to-page]="true"
+    [show-borders]="true"
+    [show-all]="true"
+    [(page)]="pageMobile"
+    [stick-to-page]="true"
+    (after-load-complete)="afterLoadComplete($event)"
+    (pagechanging)="pagechanging($event)"
     ></pdf-viewer>
-  </div>
-</div>
-<div class="footer-contract">
-  <div class="btn_footer">
-    <div class="label"></div>
-    <div class="label" *ngIf="role || this.status == 30">
-      <button
-        type="button"
-        name="next"
-        class="next action-button"
-        *ngIf="view && loaded && status != 4 && !isMultiSign"
-        (click)="downloadContract(idContract)"
-      >
-        {{ checkStatusUser(status, role) | translate }}
+
+    <div class="flex-column" style="text-align: center;margin-top: 2px;">
+      <button class="call-page" (click)="firstPageMobile()">
+        <img width="14px" height="18px" *ngIf="this.page1" src="assets/img/previousbold.svg">
+        <img width="14px" height="18px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
+      </button>
+      <button class="call-page1" (click)="previousPageMobile()">
+        <img width="10px" height="14px" *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+        <img width="10px" height="14px" *ngIf="!this.page1" src="assets/img/previous.svg">
       </button>
 
-      <button type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">
-        {{ checkStatusUser(status, role) | translate }}
+      <input class="input-mobile" [(ngModel)]="pageMobile" type="text"/>&nbsp;/ &nbsp;{{this.pageNumber}}
+
+      <button class="call-page1" id="prev" (click)="onNextPageMobile()">
+        <img width="10px" height="14px" *ngIf="this.pageLast" src="assets/img/next.svg">
+        <img width="10px" height="14px" *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
       </button>
 
-      <button type="button" name="next" class="next action-button" *ngIf="isMultiSign" (click)="signManyContract()">
-        {{ "sign.multi" | translate }}
+      <button class="call-page1" id="prev" (click)="lastPageMobile()">
+        <img width="14px" height="18px" *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+        <img width="14px" height="18px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
       </button>
     </div>
+
+    <a *ngIf="role || this.status == 30" style="position: absolute; right: 5px;">
+      <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
+      <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>      
+    </a>
+  </div>
+
+
+</div>
+
+<div class="footer-sample-contract">
+  <div class="col-md-3">
+  </div>
+  <div class="col-md-9">
+      <div *ngIf="!this.mobile" class="center" style="margin-top: 5px;">
+        
+        <a style="text-align: center">
+          <button class="call-page" (click)="firstPage()">
+            <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
+            <img  width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg">
+          </button>
+          <button style="margin-right: 5px;" class="call-page1" (click)="previousPage()">
+            <img width="12px" height="16px" *ngIf="this.page1" src="assets/img/firstpagebold.svg">
+            <img width="12px" height="16px" *ngIf="!this.page1" src="assets/img/previous.svg">
+          </button>
+    
+          <input class="input-web" [(ngModel)]="pageNum" type="text" (keyup.enter)="onEnter($event)" />&nbsp;/ &nbsp;{{this.pageNumber}}
+          <button class="call-page1" (click)="onNextPage()" id="prev">
+            <img width="12px" height="16px" *ngIf="this.pageLast" src="assets/img/next.svg">
+            <img width="12px" height="16px" *ngIf="!this.pageLast" src="assets/img/nextblur.svg">
+          </button>
+    
+          <button class="call-page1" (click)="lastPage()" id="prev">
+            <img width="16px" height="20px" *ngIf="this.pageLast" src="assets/img/lastpage.svg">
+            <img width="16px" height="20px" *ngIf="!this.pageLast" src="assets/img/lastpageblur.svg">
+          </button>
+        </a>
+
+          <a *ngIf="role || this.status == 30" style="position: absolute; right: 5px;">
+            <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
+            <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button> 
+            <button  type="button" name="next" class="next action-button" (click)="endContract()">{{'end' | translate}}</button>     
+          </a>
+
+          <a *ngIf="!role && this.status != 30" style="position: absolute; right: 5px;">
+            <button  type="button" name="next" class="next action-button" (click)="endContract()">{{'end' | translate}}</button>
+          </a>
+      </div>
   </div>
 </div>
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-spin-clockwise"
->
-  <p style="font-size: 18px; color: white">
-    {{ "sys.processing" | translate }}...
-  </p>
-</ngx-spinner>
