--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -17,9 +17,9 @@
             </div>
 
             <div *ngIf="this.typeDisplay === 'signMany'" style="padding-top: 10px;">
-                <!-- <button class="btn_submit" (click)="signManyContract()">{{'contract.sign'| translate}}</button> -->
+                <button class="btn_submit" (click)="signManyContract()">{{'contract.sign'| translate}}</button>
 
-                <button class="btn_submit" (click)="watchManyContract()">{{'watch.contract'| translate}}</button>
+                <!-- <button class="btn_submit" (click)="watchManyContract()">{{'watch.contract'| translate}}</button> -->
 
                 <button class="btn_submit" (click)="cancelSignMany()">{{'cancel'| translate}}</button>
             </div>
