--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -4,7 +4,7 @@
 <div class="sample-contract row" *ngIf="loaded && valid && this.mobile === false">
   <div class="col-md-3 sample-contract__information" style="background-color: white;">
     <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
-      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">{{'contract.detail' | translate}}</div>
+      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label">{{'contract.detail' | translate}}</div>
       <div style="line-height: 25px">
         <div>
           <span class="title-contract">{{'contract.uid' | translate}}:</span>
