--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -8,8 +8,12 @@
 
 .skeleton-sign-value {
   position: absolute;
-  bottom: 0px;
+  bottom: -5px;
   left: 0px;
+}
+
+.skeleton-sign-value1 {
+  color: green;
 }
 
 .input-edit-text {
