--- a/src/app/main/contract-signature/components/multi-sign-list/multi-sign-list.component.html
+++ b/src/app/main/contract-signature/components/multi-sign-list/multi-sign-list.component.html
@@ -3,17 +3,8 @@
 <div class="sample-contract row">
   <!--Form thông tin chi tiết hợp đồng-->
   <div class="col-md-3 sample-contract__information" style="background-color: white">
-    <div
-      class="sample-contract__information--drag"
-      id="width-element-info"
-      style="margin-top: 15px"
-    >
-      <div
-        style="padding-bottom: 10px; text-align: center; font-weight: bold"
-        class="label"
-      >
-        {{ "contract.detail" | translate }}
-      </div>
+    <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
+      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label">{{ "contract.detail" | translate }}</div>
       <div style="line-height: 25px">
         <!--Mã hợp đồng-->
         <div>
