--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -638,8 +638,7 @@
       </div>
 
       <div *ngIf="this.dataParnterOrganization().length >= 1" style="display: flex; justify-content: flex-end">
-        <u class="label text-color" (click)="deletePartner(id, item)"
-          style="background-color: #FFFFFF; cursor: pointer">{{(item.type == 2 ? 'xoa_doi_tac_to_chuc' :
+        <u class="label text-color" (click)="deletePartner(id, item)" style="background-color: #FFFFFF; cursor: pointer">{{(item.type == 2 ? 'xoa_doi_tac_to_chuc' :
           'xoa_doi_tac_ca_nhan') | translate}}</u>
       </div>
 
@@ -1169,8 +1168,7 @@
                 </div>
 
               </div>
-              <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element"
-                (click)="deletePartnerSignature(index, item)">
+              <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
                 <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
               </div>
