--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -26,7 +26,7 @@
           <span class="title-contract">{{'file.attach' | translate}}:</span>
           <span *ngFor="let d of allFileAttachment;let i = index">
             <span *ngIf="i != 0">, </span>
-            <a style="color: #106DB6" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
+            <a rel="noopener noreferrer" style="color: #106DB6" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
           </span>
         </div>
         <div>
@@ -34,7 +34,7 @@
           </span>
           <span *ngFor="let d of datas?.is_data_contract?.refs;let i = index">
             <span *ngIf="i != 0">, </span>
-            <a style="color: #106DB6;" rel="stylesheet" [href]="d.path" target="_blank">{{d.ref_name}}</a>
+            <a style="color: #106DB6;"  [href]="d.path" target="_blank" (click)="openPdf(d.path, $event)">{{d.ref_name}}</a>
           </span>
         </div>
 
