--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -34,7 +34,7 @@
                   <div class="label_detail text-color">
 
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}"
+                      <input (change)="changeTypeSign(d, index,'viewer')" type="radio" name="checkPhoneMailOrgViewer_{{index}}"
                         [value]="email" [(ngModel)]="d.login_by" />
                     </div>&nbsp;
                     <div>
@@ -45,7 +45,7 @@
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgViewer_{{index}}"
+                      <input (change)="changeTypeSign(d, index,'viewer')" type="radio" name="checkPhoneMailOrgViewer_{{index}}"
                         [(ngModel)]="d.login_by" [value]="phone" />
                     </div>&nbsp;
                     <div>
@@ -244,7 +244,7 @@
         </div>
 
 
-        <!--        to chuc cua toi - nguoi ky-->
+        <!-- to chuc cua toi - nguoi ky-->
         <div class="participants-border">
           <div class="label">{{'user.sign' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
@@ -263,7 +263,7 @@
                   <div class="label_detail text-color">
 
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}"
+                      <input (change)="changeTypeSign(d, index,'signer')" type="radio" name="checkPhoneMailOrgSigner_{{index}}"
                         [value]="email" [(ngModel)]="d.login_by" />
                     </div>&nbsp;
                     <div>
@@ -274,7 +274,7 @@
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div>
-                      <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailOrgSigner_{{index}}"
+                      <input (change)="changeTypeSign(d, index,'signer')" type="radio" name="checkPhoneMailOrgSigner_{{index}}"
                         [(ngModel)]="d.login_by" [value]="phone" />
                     </div>&nbsp;
                     <div>
@@ -827,7 +827,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" type="radio"
+                        <input (change)="changeTypeSign(d, index)" type="radio"
                           name="checkPhoneMailParticipantViewer_{{index}}" [value]="email" [(ngModel)]="d.login_by" />
                       </div>&nbsp;
                       <div>
@@ -838,7 +838,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" type="radio"
+                        <input (change)="changeTypeSign(d, index)" type="radio"
                           name="checkPhoneMailParticipantViewer_{{index}}" [(ngModel)]="d.login_by" [value]="phone" />
                       </div>&nbsp;
                       <div>
@@ -1031,7 +1031,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}"
+                        <input (change)="changeTypeSign(d, index)" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}"
                           type="radio" [value]="email" [(ngModel)]="d.login_by" />
                       </div>&nbsp;
                       <div>
@@ -1042,7 +1042,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}"
+                        <input (change)="changeTypeSign(d, index)" name="checkPhoneMailParticipantSigner_{{index}}_{{id}}"
                           type="radio" [value]="phone" [(ngModel)]="d.login_by" />
                       </div>&nbsp;
                       <div>
@@ -1456,7 +1456,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" name="checkPhoneMailPerson_{{index}}_{{id}}" type="radio"
+                        <input (change)="changeTypeSign(d, index)" name="checkPhoneMailPerson_{{index}}_{{id}}" type="radio"
                           [value]="email" [(ngModel)]="d.login_by" />
                       </div>&nbsp;
                       <div>
@@ -1467,7 +1467,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input (change)="changeTypeSign(d)" name="checkPhoneMailPerson_{{index}}_{{id}}" type="radio"
+                        <input (change)="changeTypeSign(d, index)" name="checkPhoneMailPerson_{{index}}_{{id}}" type="radio"
                           [value]="phone" [(ngModel)]="d.login_by" />
                       </div>&nbsp;
                       <div>
