fix bug sms & sua ng trong luong xly

--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
@@ -25,7 +25,7 @@
     border-radius: 10px 10px 0 0;
     display: flex;
     align-items: center;
-    padding-left: 16px;
+    padding-left: 40%;
   }
   
   .label_detail {
@@ -284,7 +284,7 @@
   
     .contract__content--participants {
       border-radius: 10px;
-      border: 1px solid #87CAFF;
+      // border: 1px solid #87CAFF;
       background-color: #F9FDFF;
       padding: 19px 10px 13px 10px;
   
