--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -745,6 +745,32 @@
                       <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" checked
                         (change)="changeIsSmsReviewer($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+
+                      <!-- <div class="input-data" style="width: 13%; margin-top: 8px;">
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
+                          <div *ngIf="d.locale =='vi'">
+                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div *ngIf="d.locale =='en'">
+                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                            <div class="switch-language">
+                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
+                                <div class="language">{{ "vie" | translate }}</div>
+                              </button>
+                            </div>
+                            <div class="switch-language">
+                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
+                                <div class="language">{{ "eng" | translate }}</div>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div> -->
+
                     </div>
                   </div>
                 </div>
@@ -933,6 +959,33 @@
                       <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="d.is_otp == 1" checked
                         [disabled]="getDataSignCka(d).length > 0" (change)="changeIsSmsSignature($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+
+                      <!-- <div class="input-data" style="width: 6%; margin-top: 8px;">
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
+                          <div *ngIf="d.locale =='vi'">
+                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div *ngIf="d.locale =='en'">
+                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                            <div class="switch-language">
+                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
+                                <div class="language">{{ "vie" | translate }}</div>
+                              </button>
+                            </div>
+                            <div class="switch-language">
+                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
+                                <div class="language">{{ "eng" | translate }}</div>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div> -->
+
+
                     </div>
                   </div>
                 </div>
@@ -1001,6 +1054,32 @@
                         [disabled]="getDataSignCka(d).length > 0" checked
                         (change)="changeIsSmsDocument($event, item, index)">
                       <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+
+                      <!-- <div class="input-data" style="width: 6%; margin-top: 8px;">
+                        <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
+                          <div *ngIf="d.locale =='vi'">
+                            <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div *ngIf="d.locale =='en'">
+                            <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                              id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                          </div>
+                          <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                            <div class="switch-language">
+                              <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
+                                <div class="language">{{ "vie" | translate }}</div>
+                              </button>
+                            </div>
+                            <div class="switch-language">
+                              <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
+                                <div class="language">{{ "eng" | translate }}</div>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div> -->
+                      
                     </div>
                   </div>
                 </div>
